--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Palabras Claves -->
+    <meta name="keywords" content="Diseño Grafico, Diseño Web,">
+    <!-- Meta Description -->
     <title>Diseños Grafico & Web : Victor Montoya </title>
     <!-- Elementos de diseño -->
+    <meta name="description" content="Diseñador grafico con una experiencia de 10 años en el campo del diseño web y branding">
+    <!-- Fin de SEO -->
     <link rel="icon" href="assets/img/icon_gris_victormontoya.ico">
     <link rel="stylesheet" href="css/style.css"></li>
     <link rel="stylesheet" href="css/font-awesome.min.css">
