--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <!-- Palabras Claves -->
     <meta name="keywords" content="Diseño Grafico, Diseño Web,">
     <!-- Meta Description -->
+    <meta name="description" content="Diseñador grafico con una experiencia de 10 años en el campo del diseño web y branding">
+    <!-- Titulo de Page -->
     <title>Diseños Grafico & Web : Victor Montoya </title>
     <!-- Elementos de diseño -->
-    <meta name="description" content="Diseñador grafico con una experiencia de 10 años en el campo del diseño web y branding">
-    <!-- Fin de SEO -->
     <link rel="icon" href="assets/img/icon_gris_victormontoya.ico">
     <link rel="stylesheet" href="css/style.css"></li>
     <link rel="stylesheet" href="css/font-awesome.min.css">
