--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Palabras Claves -->
-    <meta name="keywords" content="Diseño Grafico, Diseño Web,">
+    <meta name="keywords" content="Diseñador Gráfico, Diseñador Web, Diseño BTL, Montaje BTL, Montaje de Ecommerce , Tiendas Online">
     <!-- Meta Description -->
-    <meta name="description" content="Diseñador grafico con una experiencia de 10 años en el campo del diseño web y branding">
+    <meta name="description" content="Estamos listos para llevar tu marca a un nuevo nivel con estrategias de Marketing Digital, Publicidad, BTL, desarrollo de plataformas web y e-commerce y Packaging ¡Contáctanos!">
     <!-- Titulo de Page -->
-    <title>Diseños Grafico & Web : Victor Montoya </title>
+    <title>Diseños Grafico & Web  ||  Victor Montoya </title>
     <!-- Elementos de diseño -->
     <link rel="icon" href="assets/img/icon_gris_victormontoya.ico">
     <link rel="stylesheet" href="css/style.css"></li>
