--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Meta Description -->
     <meta name="description" content="Estamos listos para llevar tu marca a un nuevo nivel con estrategias de Marketing Digital, Publicidad, BTL, desarrollo de plataformas web y e-commerce y Packaging ¡Contáctanos!">
     <!-- Titulo de Page -->
-    <title>Diseños Grafico & Web  ||  Victor Montoya </title>
+    <title>Diseño Grafico & Web || Victor Montoya </title>
     <!-- Elementos de diseño -->
     <link rel="icon" href="assets/img/icon_gris_victormontoya.ico">
     <link rel="stylesheet" href="css/style.css"></li>
