--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
                 </ul>
             </nav>
             <div class="topRedes">
-                <a href="https://www.facebook.com/profile.php?id=100008242691843">
+                <a target="_blank"  href="https://www.facebook.com/profile.php?id=100008242691843">
                     <i class="fa fa-facebook"></i>
                 </a>
-                <a href="https://www.instagram.com/disvictormontoya/?hl=es-la">
+                <a target="_blank"  href="https://www.instagram.com/disvictormontoya/?hl=es-la">
                     <i class="fa fa-instagram"></i>
                 </a>
-                <a href="https://www.behance.net/disvictormc270">
+                <a target="_blank"  href="https://www.behance.net/disvictormc270">
                     <i class="fa fa-behance"></i>
                 </a>
-                <a href="https://www.linkedin.com/in/victor-montoya-989817bb/">
+                <a target="_blank"  href="https://www.linkedin.com/in/victor-montoya-989817bb/">
                     <i class="fa fa-linkedin"></i>
                 </a>
 		</div>
@@ -55,10 +55,10 @@
             <h4> Descripción del proyecto </h4>       
             <div class="button">
                 <div class="button1">
-                    <a href="#">Servicios</a>
+                    <a href="/page/clientes.html">Servicios</a>
                 </div>
                 <div class="button2">
-                    <a href="#">Portafolio</a>
+                    <a href="/page/clientes.html">Portafolio</a>
                 </div>
             </div>
         </section>
@@ -71,7 +71,7 @@
                         <h3>Servicio 1</h3>
                         <p>Descripción del servicio Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, commodi nemo. Nam minima illum sequi laboriosam! Aut neque tenetur fuga, perferendis maiores eligendi laudantium adipisci, molestiae deleniti quo, repellat repudiandae?</p>
                         <li>
-                            <a href="#">Saber Más</a>
+                            <a href="/page/curriculum.html">Saber Más</a>
                         </li>
                     </figcaption>
                 </figure>
@@ -83,7 +83,7 @@
                         <h3>Servicio 1</h3>
                         <p>Descripción del servicio Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, commodi nemo. Nam minima illum sequi laboriosam! Aut neque tenetur fuga, perferendis maiores eligendi laudantium adipisci, molestiae deleniti quo, repellat repudiandae?</p>
                         <li>
-                            <a href="#">Saber Más</a>
+                            <a href="/page/clientes.html">Saber Más</a>
                         </li>
                     </figcaption>
                 </figure>
@@ -121,18 +121,30 @@
             <div class="columnMenus">
                 <nav class="menuFooter">
                     <ul>
-                        <li><a href="page/portafolio.html">Portafolio</a></li>
-                        <li><a href="page/clientes.html">Clientes</a></li>  
-                        <li><a href="page/curriculum.html">Curriculum</a></li>
-                        <li><a href="page/contact.html">Contacto</a></li>
+                        <li>
+                            <a href="page/portafolio.html">Portafolio</a>
+                        </li>
+                        <li>
+                            <a href="page/clientes.html">Clientes</a>
+                        </li>  
+                        <li>
+                            <a href="page/curriculum.html">Curriculum</a>
+                        </li>
+                        <li>
+                            <a href="page/contact.html">Contacto</a>
+                        </li>
                     </ul>
                 </nav>
             </div>
             <div class="columnMenus">
                 <nav class="menuFooter1">
                     <ul>
-                        <li><a href="#">Políticas de privacidad</a></li>
-                        <li><a href="#">Aviso Legal</a></li>  
+                        <li>
+                            <a href="#">Políticas de privacidad</a>
+                        </li>
+                        <li>
+                            <a href="#">Aviso Legal</a>
+                        </li>  
                     </ul>
                 </nav>
             </div>
@@ -145,16 +157,16 @@
         <!-- copy -->
         <section class="copyRights">
             <div class="footerRedes">
-				<a href="https://www.facebook.com/profile.php?id=100008242691843">
+				<a target="_blank" href="https://www.facebook.com/profile.php?id=100008242691843">
 					<i class="fa fa-facebook"></i>
                 </a>
-				<a href="https://www.instagram.com/disvictormontoya/?hl=es-la">
+				<a target="_blank" href="https://www.instagram.com/disvictormontoya/?hl=es-la">
 					<i class="fa fa-instagram"></i>
 				</a>
-				<a href="https://www.behance.net/disvictormc270">
+				<a target="_blank" href="https://www.behance.net/disvictormc270">
 					<i class="fa fa-behance"></i>
 				</a>
-                <a href="https://www.linkedin.com/in/victor-montoya-989817bb/">
+                <a target="_blank" href="https://www.linkedin.com/in/victor-montoya-989817bb/">
 					<i class="fa fa-linkedin"></i>
 				</a>
 			</div>
