--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
     <main class="mainHome">
         <!-- Video portada -->
         <section class="videoPortada" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="1500">
-            <h1> Slogan de la marca <br> Cualidades </h1> 
-            <h4> Descripción del proyecto </h4>       
+            <h1> Servicios web y gráfico <br> que conecta marcas </h1> 
+            <h4> Si lo hacemos juntos el mundo queda pequeño </h4>       
             <div class="button">
                 <div class="button1">
-                    <a href="/page/clientes.html">Servicios</a>
+                    <a href="/page/portafolio.html">Servicios</a>
                 </div>
                 <div class="button2">
-                    <a href="/page/clientes.html">Portafolio</a>
+                    <a href="/page/curriculum.html">Curriculum</a>
                 </div>
             </div>
         </section>
@@ -68,8 +68,8 @@
                 <figure class="servi1">
                     <img src="assets/img/provicional.png" alt="">
                     <figcaption>
-                        <h3>Servicio 1</h3>
-                        <p>Descripción del servicio Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, commodi nemo. Nam minima illum sequi laboriosam! Aut neque tenetur fuga, perferendis maiores eligendi laudantium adipisci, molestiae deleniti quo, repellat repudiandae?</p>
+                        <h3>Diseño web</h3>
+                        <p>En una disciplina en constante evolución, hacemos que todo luzca perfecto. Con un enfoque moderno del diseño, estamos orientados a las soluciones sin dejar de centrarnos en el producto final.Ofrecemos servicios completos, capaces de manejar todos los aspectos de un proyecto web, empezando por la planificación estratégica, el seguimiento post-lanzamiento, la gestión y el mantenimiento.</p>
                         <li>
                             <a href="/page/curriculum.html">Saber Más</a>
                         </li>
@@ -80,8 +80,8 @@
                 <figure class="servi1">
                     <img src="assets/img/provicional.png" alt="">
                     <figcaption>
-                        <h3>Servicio 1</h3>
-                        <p>Descripción del servicio Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, commodi nemo. Nam minima illum sequi laboriosam! Aut neque tenetur fuga, perferendis maiores eligendi laudantium adipisci, molestiae deleniti quo, repellat repudiandae?</p>
+                        <h3>Branding</h3>
+                        <p>Tu marca es más que un producto o servicio. Más que un modelo de negocio. Tu marca son los significados que le da tu usuario. Clásico o moderno. Seguro o dinámico. Transversal o especializado. Transforma tu marca activando lo que importa. Significados y experiencias de marca que empiezan con un paso. ¿Quieres darlo?</p>
                         <li>
                             <a href="/page/clientes.html">Saber Más</a>
                         </li>
@@ -91,7 +91,7 @@
             <div class="columnServTitle">
                 <div class="columnText">
                     <h2>Catálogo de Servicios</h2>
-                    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, labore aliquid harum quo similique laudantium deleniti odit optio ab pariatur. At fuga harum quis quisquam sint porro hic rerum aliquam.</p>
+                    <p>Analizar y hacer un diagnóstico del modelo de negocio para encontrar a partir de un método de trabajo experiencial e investigativo la construcción de un plan a la medida de los objetivos que tiene cada cliente.</p>
                 </div>
             </div>
         </section>
@@ -102,7 +102,7 @@
         <section class="parnert">
             <div class="textParnert">
                 <h2>Expert Parnert</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, debitis. Laboriosam, sed modi? Quis dolore enim laborum magnam quod, fugiat, dolorem assumenda voluptates at modi quasi, vel quidem labore illo.</p>
+                <p>¿Necesitas resultados? Bienvenido a nuestra marketing performance Agency. Aliados con los mejores para conseguir el éxito en el proyecto de todos nuestros socios.Con estos criterios, las marcas pueden estar seguras trabajando con unos socios con una eficiencia comprobada. Así lo socios pueden centrarse en el trabajo de campo, mientras que la marca se concentra en lo que mejor sabe hacer.</p>
             </div>
             <article class="logos">
                 <div class="logo">
