--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <h3>Diseño web</h3>
                         <p>En una disciplina en constante evolución, hacemos que todo luzca perfecto. Con un enfoque moderno del diseño, estamos orientados a las soluciones sin dejar de centrarnos en el producto final.Ofrecemos servicios completos, capaces de manejar todos los aspectos de un proyecto web, empezando por la planificación estratégica, el seguimiento post-lanzamiento, la gestión y el mantenimiento.</p>
                         <li>
-                            <a href="/page/curriculum.html">Saber Más</a>
+                            <a href="/page/portafolio.html">Saber Más</a>
                         </li>
                     </figcaption>
                 </figure>
@@ -83,7 +83,7 @@
                         <h3>Branding</h3>
                         <p>Tu marca es más que un producto o servicio. Más que un modelo de negocio. Tu marca son los significados que le da tu usuario. Clásico o moderno. Seguro o dinámico. Transversal o especializado. Transforma tu marca activando lo que importa. Significados y experiencias de marca que empiezan con un paso. ¿Quieres darlo?</p>
                         <li>
-                            <a href="/page/clientes.html">Saber Más</a>
+                            <a href="/page/portafolio.html">Saber Más</a>
                         </li>
                     </figcaption>
                 </figure>
