--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <section class="servicios" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="1500">
             <div class="columnServ">
                 <figure class="servi1">
-                    <img src="assets/img/provicional.png" alt="">
+                    <img src="assets/img/testia-app-makingof-11-1024x576.jpg" alt="">
                     <figcaption>
                         <h3>Diseño web</h3>
                         <p>En una disciplina en constante evolución, hacemos que todo luzca perfecto. Con un enfoque moderno del diseño, estamos orientados a las soluciones sin dejar de centrarnos en el producto final.Ofrecemos servicios completos, capaces de manejar todos los aspectos de un proyecto web, empezando por la planificación estratégica, el seguimiento post-lanzamiento, la gestión y el mantenimiento.</p>
@@ -78,7 +78,7 @@
             </div>
             <div class="columnServ">
                 <figure class="servi1">
-                    <img src="assets/img/provicional.png" alt="">
+                    <img src="assets/img/senor-franklin-brand-proyecto-07.jpg" alt="">
                     <figcaption>
                         <h3>Branding</h3>
                         <p>Tu marca es más que un producto o servicio. Más que un modelo de negocio. Tu marca son los significados que le da tu usuario. Clásico o moderno. Seguro o dinámico. Transversal o especializado. Transforma tu marca activando lo que importa. Significados y experiencias de marca que empiezan con un paso. ¿Quieres darlo?</p>
