--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
             <h4> Si lo hacemos juntos el mundo queda pequeño </h4>       
             <div class="button">
                 <div class="button1">
-                    <a href="/page/portafolio.html">Servicios</a>
+                    <a href="/victormontoya_saas/page/portafolio.html">Servicios</a>
                 </div>
                 <div class="button2">
-                    <a href="/page/curriculum.html">Curriculum</a>
+                    <a href="/victormontoya_saas/page/curriculum.html">Curriculum</a>
                 </div>
             </div>
         </section>
